Refactor and resets

--- a/_dev/index.html
+++ b/_dev/index.html
@@ -10,7 +10,10 @@
   <body>
     <h1>Heading 1</h1>
 
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto commodi id dolorem deleniti eum quis ea. Quaerat,
-    possimus doloribus? Laborum iste quam <a href="#">exercitationem aperiam</a> eum expedita nisi illo commodi itaque.
+    <div class="wrapper">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto commodi id dolorem deleniti eum quis ea. Quaerat,
+      possimus doloribus? Laborum iste quam <a href="#">exercitationem aperiam</a> eum expedita nisi illo commodi
+      itaque.
+    </div>
   </body>
 </html>
