--- a/_dev/index.html
+++ b/_dev/index.html
@@ -11,7 +11,7 @@
     <h1>Heading 1</h1>
 
     <div class="wrapper">
-      <p>
+      <p class="text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto commodi id dolorem deleniti eum quis ea.
         Quaerat, possimus doloribus? Laborum iste quam <a href="#">exercitationem aperiam</a> eum expedita nisi illo
         commodi itaque.
@@ -24,9 +24,11 @@
           <li>Item 3</li>
           <li>Item 4</li>
         </ul>
-
-        <button>Click me</button>
       </div>
+
+      <button>Click me</button>
+
+      <div class="box">Box</div>
     </div>
   </body>
 </html>
