--- a/dev/index.html
+++ b/dev/index.html
@@ -26,7 +26,7 @@
         </ul>
       </div>
 
-      <button>Click me</button>
+      <button class="btn">Click me</button>
 
       <div class="box">Box</div>
     </div>
