--- a/dev/index.html
+++ b/dev/index.html
@@ -28,7 +28,18 @@
 
       <button class="btn">Click me</button>
 
-      <div class="box">Box</div>
+      <div class="box-grid">
+        <div class="box box--1">Box</div>
+        <div class="box box--2">Box</div>
+        <div class="box box--3">Box</div>
+        <div class="box box--4">Box</div>
+        <div class="box box--5">Box</div>
+        <div class="box box--6">Box</div>
+        <div class="box box--7">Box</div>
+        <div class="box box--8">Box</div>
+        <div class="box box--9">Box</div>
+        <div class="box box--10">Box</div>
+      </div>
     </div>
   </body>
 </html>
