--- a/dev/index.html
+++ b/dev/index.html
@@ -28,5 +28,11 @@
 
       <button class="btn">Click me</button>
     </div>
+
+    <div class="wrapper mt-8 border-green-600">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
+      blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod consequuntur molestiae atque
+      reprehenderit.
+    </div>
   </body>
 </html>
