--- a/dev/index.html
+++ b/dev/index.html
@@ -29,7 +29,7 @@
       <button class="btn">Click me</button>
     </div>
 
-    <div class="wrapper mt-8 border-green-600">
+    <div class="wrapper mt-16 grid">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
       blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod consequuntur molestiae atque
       reprehenderit.
