--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
     <title>koiCSS Development</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <body class="accent-blue">
+  <body class="accent-green">
     <h1>Heading 1</h1>
 
     <div class="wrapper">
@@ -33,6 +33,10 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
       blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod consequuntur molestiae atque
       reprehenderit.
+    </div>
+
+    <div class="wrapper loaders">
+      <span class="loader-ring"></span>
     </div>
   </body>
 </html>
