--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
     <title>koiCSS Development</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <body class="accent-green">
+  <body class="accent-blue">
     <h1>Heading 1</h1>
 
     <div class="wrapper">
@@ -36,7 +36,15 @@
     </div>
 
     <div class="wrapper loaders">
-      <span class="loader-ring"></span>
+      <span class="loader-1"></span>
+      <span class="loader-2"></span>
+      <span class="loader-3"></span>
+      <span class="loader-4"></span>
+      <span class="loader-5"></span>
+      <span class="loader-6"></span>
+      <span class="loader-7"></span>
+      <span class="loader-8"></span>
+      <span class="loader-9"></span>
     </div>
   </body>
 </html>
