--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-  <!-- <html lang="en" data-theme="light"> -->
+<html lang="en" color-scheme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
