--- a/dev/index.html
+++ b/dev/index.html
@@ -17,7 +17,7 @@
         commodi itaque.
       </p>
 
-      <div class="lists">
+      <div class="lists centered">
         <ul role="list">
           <li>Item 1</li>
           <li>Item 2</li>
@@ -45,6 +45,20 @@
       <span class="loader-7"></span>
       <span class="loader-8"></span>
       <span class="loader-9"></span>
+    </div>
+
+    <div class="md:centered">Hello</div>
+
+    <div class="the-stack wrapper stack-x md:stack-x-reverse">
+      <div class="box centered">Box A</div>
+      <div class="box centered">Box B</div>
+      <div class="box centered">Box C</div>
+    </div>
+
+    <div class="the-stack wrapper stack-y md:stack-y-reverse">
+      <div class="box centered">Box A</div>
+      <div class="box centered">Box B</div>
+      <div class="box centered">Box C</div>
     </div>
   </body>
 </html>
