--- a/dev/index.html
+++ b/dev/index.html
@@ -50,15 +50,15 @@
     <div class="md:centered">Hello</div>
 
     <div class="the-stack wrapper stack-x md:stack-x-reverse">
-      <div class="box centered">Box A</div>
-      <div class="box centered">Box B</div>
-      <div class="box centered">Box C</div>
+      <div class="box box--a centered rise">Box A</div>
+      <div class="box box--b centered">Box B</div>
+      <div class="box box--c centered">Box C</div>
     </div>
 
     <div class="the-stack wrapper stack-y md:stack-y-reverse">
-      <div class="box centered">Box A</div>
-      <div class="box centered">Box B</div>
-      <div class="box centered">Box C</div>
+      <div class="box box--d centered">Box D</div>
+      <div class="box box--e centered">Box E</div>
+      <div class="box box--f centered">Box F</div>
     </div>
   </body>
 </html>
