--- a/dev/index.html
+++ b/dev/index.html
@@ -60,5 +60,10 @@
       <div class="box box--e centered">Box E</div>
       <div class="box box--f centered">Box F</div>
     </div>
+
+    <div class="is-box">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque cum cumque hic nesciunt. Laborum nemo doloremque
+      illo, consequuntur dolore nostrum tenetur libero nihil molestiae iure amet quasi architecto obcaecati mollitia.
+    </div>
   </body>
 </html>
