--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,8 @@
     <title>koiCSS Development</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <body class="accent-blue">
+  <!-- <body class="accent-primary"> -->
+  <body class="">
     <h1>Heading 1</h1>
 
     <div class="wrapper">
@@ -35,7 +36,7 @@
       reprehenderit.
     </div>
 
-    <div class="wrapper loaders">
+    <!-- <div class="wrapper loaders">
       <span class="loader-1"></span>
       <span class="loader-2"></span>
       <span class="loader-3"></span>
@@ -45,9 +46,9 @@
       <span class="loader-7"></span>
       <span class="loader-8"></span>
       <span class="loader-9"></span>
-    </div>
+    </div> -->
 
-    <div class="md:centered">Hello</div>
+    <!-- <div class="md:centered">Hello</div> -->
 
     <div class="the-stack wrapper stack-x md:stack-x-reverse">
       <div class="box box--a centered rise">Box A</div>
@@ -55,15 +56,21 @@
       <div class="box box--c centered">Box C</div>
     </div>
 
-    <div class="the-stack wrapper stack-y md:stack-y-reverse">
+    <!-- <div class="the-stack wrapper stack-y md:stack-y-reverse">
       <div class="box box--d centered">Box D</div>
       <div class="box box--e centered">Box E</div>
       <div class="box box--f centered">Box F</div>
-    </div>
+    </div> -->
 
     <div class="is-box">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque cum cumque hic nesciunt. Laborum nemo doloremque
       illo, consequuntur dolore nostrum tenetur libero nihil molestiae iure amet quasi architecto obcaecati mollitia.
+
+      <p>
+        Loremipsumdolorsitametconsecteturadipisicingelit. Laboriosam itaque quos, cumque voluptatibus recusandae
+        namtemporibusnesciuntmodiquisquamaspernatur laudantium! Quo eos, exercitationem-dolores-eius-abenim explicabo
+        odit?
+      </p>
     </div>
   </body>
 </html>
