--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" color-scheme="light dark">
+<html lang="en" color-scheme="normal">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,8 +7,7 @@
     <title>koiCSS Development</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <!-- <body class="accent-primary"> -->
-  <body class="">
+  <body class="accent-primary">
     <h1>Heading 1</h1>
 
     <div class="wrapper">
@@ -71,6 +70,16 @@
         namtemporibusnesciuntmodiquisquamaspernatur laudantium! Quo eos, exercitationem-dolores-eius-abenim explicabo
         odit?
       </p>
+    </div>
+
+    <div class="stack-y">
+      <input type="text" />
+      <input type="checkbox" name="checkbox1" id="checkbox1" />
+      <select name="countries" id="countries">
+        <option value="pt">Portugal</option>
+        <option value="uk">United Kingdom</option>
+        <option value="es">Spain</option>
+      </select>
     </div>
   </body>
 </html>
