--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" color-scheme="normal">
+<html lang="en" color-scheme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,19 +17,19 @@
         commodi itaque.
       </p>
 
-      <div class="lists centered">
+      <!-- <div class="lists centered">
         <ul role="list">
           <li>Item 1</li>
           <li>Item 2</li>
           <li>Item 3</li>
           <li>Item 4</li>
         </ul>
-      </div>
+      </div> -->
 
-      <button class="btn">Click me</button>
+      <!-- <button class="btn">Click me</button> -->
     </div>
 
-    <div class="wrapper 2xl:hidden">
+    <div class="wrapper hidden md:block">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
       blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod consequuntur molestiae atque
       reprehenderit.
@@ -49,11 +49,11 @@
 
     <!-- <div class="md:centered">Hello</div> -->
 
-    <div class="the-stack wrapper stack-x md:stack-x-reverse">
+    <!-- <div class="the-stack wrapper stack-x md:stack-x-reverse">
       <div class="box box--a centered rise">Box A</div>
       <div class="box box--b centered">Box B</div>
       <div class="box box--c centered">Box C</div>
-    </div>
+    </div> -->
 
     <!-- <div class="the-stack wrapper stack-y md:stack-y-reverse">
       <div class="box box--d centered">Box D</div>
@@ -61,7 +61,7 @@
       <div class="box box--f centered">Box F</div>
     </div> -->
 
-    <div class="is-box">
+    <!-- <div class="is-box">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque cum cumque hic nesciunt. Laborum nemo doloremque
       illo, consequuntur dolore nostrum tenetur libero nihil molestiae iure amet quasi architecto obcaecati mollitia.
 
@@ -70,9 +70,9 @@
         namtemporibusnesciuntmodiquisquamaspernatur laudantium! Quo eos, exercitationem-dolores-eius-abenim explicabo
         odit?
       </p>
-    </div>
+    </div> -->
 
-    <div class="stack-y">
+    <!-- <div class="stack-y">
       <input type="text" />
       <input type="checkbox" name="checkbox1" id="checkbox1" />
       <select name="countries" id="countries">
@@ -80,6 +80,6 @@
         <option value="uk">United Kingdom</option>
         <option value="es">Spain</option>
       </select>
-    </div>
+    </div> -->
   </body>
 </html>
