--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" color-scheme="dark">
+<html lang="en" data-theme="auto">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
