--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,8 @@
     <title>koiCSS Development</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <body class="accent-primary">
+  <!-- <body class="accent-primary"> -->
+  <body class="">
     <h1>Heading 1</h1>
 
     <div class="wrapper">
