--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,6 @@
     <title>koiCSS Development</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <!-- <body class="accent-primary"> -->
   <body class="">
     <h1>Heading 1</h1>
 
@@ -32,9 +31,30 @@
 
     <div class="wrapper hidden md:block">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
-      blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod consequuntur molestiae atque
-      reprehenderit.
+      blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod
+      <a href="#">consequntur</a> molestiae atque reprehenderit.
     </div>
+
+    <pre><code class="language-html">&lt;article class="prose"&gt;
+  &lt;h1&gt;Garlic bread with cheese: What the science tells us&lt;/h1&gt;
+  &lt;p&gt;
+    For years parents have espoused the health benefits of eating garlic bread with cheese to their
+    children, with the food earning such an iconic status in our culture that kids will often dress
+    up as warm, cheesy loaf for Halloween.
+  &lt;/p&gt;
+  &lt;p&gt;
+    But a recent study shows that the celebrated appetizer may be linked to a series of rabies cases
+    springing up around the country.
+  &lt;/p&gt;
+  &lt;!-- ... --&gt;
+&lt;/article&gt;</code></pre>
+
+    <blockquote>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione animi,
+        accusantium nulla reiciendis, hic officia doloribus eos delectus beatae error quaerat sapiente fuga tempore!
+      </p>
+    </blockquote>
 
     <!-- <div class="wrapper loaders">
       <span class="loader-1"></span>
