--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
     <title>koiCSS Development</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <body class="accent-red">
+  <body class="">
     <h1>Heading 1</h1>
 
     <div class="wrapper">
