--- a/dev/index.html
+++ b/dev/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="auto">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>koiCSS Development</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-  </head>
-  <body class="">
-    <h1>Heading 1</h1>
 
-    <div class="wrapper">
-      <p class="text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto commodi id dolorem deleniti eum quis ea.
-        Quaerat, possimus doloribus? Laborum iste quam <a href="#">exercitationem aperiam</a> eum expedita nisi illo
-        commodi itaque.
-      </p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>koiCSS Development</title>
+  <link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-      <!-- <div class="lists centered">
+<body class="">
+  <h1>Heading 1</h1>
+
+  <div class="wrapper">
+    <p class="text">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto commodi id dolorem deleniti eum quis ea.
+      Quaerat, possimus doloribus? Laborum iste quam <a href="#">exercitationem aperiam</a> eum expedita nisi illo
+      commodi itaque.
+    </p>
+
+    <!-- <div class="lists centered">
         <ul role="list">
           <li>Item 1</li>
           <li>Item 2</li>
@@ -26,16 +28,21 @@
         </ul>
       </div> -->
 
-      <!-- <button class="btn">Click me</button> -->
-    </div>
+    <!-- <button class="btn">Click me</button> -->
+  </div>
 
-    <div class="wrapper hidden md:block">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
-      blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod
-      <a href="#">consequntur</a> molestiae atque reprehenderit.
-    </div>
+  <div class="wrapper hidden md:block">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
+    blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod
+    <a href="#">consequntur</a> molestiae atque reprehenderit.
+  </div>
 
-    <pre><code class="language-html">&lt;article class="prose"&gt;
+  <blockquote>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione animi,
+      accusantium nulla reiciendis, hic officia doloribus eos delectus beatae error quaerat sapiente fuga tempore!</p>
+  </blockquote>
+
+  <pre><code class="language-html">&lt;article class="prose"&gt;
   &lt;h1&gt;Garlic bread with cheese: What the science tells us&lt;/h1&gt;
   &lt;p&gt;
     For years parents have espoused the health benefits of eating garlic bread with cheese to their
@@ -49,14 +56,7 @@
   &lt;!-- ... --&gt;
 &lt;/article&gt;</code></pre>
 
-    <blockquote>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione animi,
-        accusantium nulla reiciendis, hic officia doloribus eos delectus beatae error quaerat sapiente fuga tempore!
-      </p>
-    </blockquote>
-
-    <!-- <div class="wrapper loaders">
+  <!-- <div class="wrapper loaders">
       <span class="loader-1"></span>
       <span class="loader-2"></span>
       <span class="loader-3"></span>
@@ -68,21 +68,21 @@
       <span class="loader-9"></span>
     </div> -->
 
-    <!-- <div class="md:centered">Hello</div> -->
+  <!-- <div class="md:centered">Hello</div> -->
 
-    <!-- <div class="the-stack wrapper stack-x md:stack-x-reverse">
+  <!-- <div class="the-stack wrapper stack-x md:stack-x-reverse">
       <div class="box box--a centered rise">Box A</div>
       <div class="box box--b centered">Box B</div>
       <div class="box box--c centered">Box C</div>
     </div> -->
 
-    <!-- <div class="the-stack wrapper stack-y md:stack-y-reverse">
+  <!-- <div class="the-stack wrapper stack-y md:stack-y-reverse">
       <div class="box box--d centered">Box D</div>
       <div class="box box--e centered">Box E</div>
       <div class="box box--f centered">Box F</div>
     </div> -->
 
-    <!-- <div class="is-box">
+  <!-- <div class="is-box">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque cum cumque hic nesciunt. Laborum nemo doloremque
       illo, consequuntur dolore nostrum tenetur libero nihil molestiae iure amet quasi architecto obcaecati mollitia.
 
@@ -93,7 +93,7 @@
       </p>
     </div> -->
 
-    <!-- <div class="stack-y">
+  <!-- <div class="stack-y">
       <input type="text" />
       <input type="checkbox" name="checkbox1" id="checkbox1" />
       <select name="countries" id="countries">
@@ -102,5 +102,6 @@
         <option value="es">Spain</option>
       </select>
     </div> -->
-  </body>
+</body>
+
 </html>
