--- a/dev/index.html
+++ b/dev/index.html
@@ -9,8 +9,25 @@
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body class="">
+<body class="accent-red">
   <h1>Heading 1</h1>
+
+  <div class="md:container mx-auto mt-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam accusamus
+    deleniti
+    illo
+    eveniet,
+    aspernatur quasi
+    id quidem? Harum, quis earum? Non delectus voluptas debitis beatae atque dolor enim esse nostrum!
+    Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet cupiditate cumque dolore voluptatem
+    adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
+    expedita, quos consequatur! Cumque.
+    Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae officia
+    velit. Aperiam, ex minima? Magnam, aspernatur. Velit iste asperiores minima, magnam voluptatum in.
+    Ab qui officiis aperiam voluptatem, nostrum est magni voluptatum similique aliquid. Eius nam omnis officia beatae
+    earum consequuntur unde id, quia, ratione blanditiis quo molestias autem, deleniti deserunt neque voluptate.
+    Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae consequuntur
+    praesentium optio veritatis unde, tempore molestias non iusto tempora ab quod, labore asperiores consectetur?
+    Obcaecati!</div>
 
   <div class="wrapper">
     <p class="text">
