--- a/dev/index.html
+++ b/dev/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body class="accent-red">
+<body class="">
   <h1>Heading 1</h1>
 
   <div class="md:container mx-auto mt-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam accusamus
