--- a/dev/index.html
+++ b/dev/index.html
@@ -12,7 +12,8 @@
 <body class="">
   <h1>Heading 1</h1>
 
-  <div class="md:container mx-auto mt-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam accusamus
+  <div class="md:container mx-auto mt-lg md:columns-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam
+    accusamus
     deleniti
     illo
     eveniet,
