--- a/dev/index.html
+++ b/dev/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body class="">
+<body class="p-32">
   <h1>Heading 1</h1>
 
-  <div class="md:container mx-auto mt-lg md:columns-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam
+  <div class="sm:container mx-auto md:columns-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam
     accusamus
     deleniti
     illo
