--- a/dev/index.html
+++ b/dev/index.html
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body class="p-32">
+<body class="mx-auto lg:container p-32 accent-black">
   <h1>Heading 1</h1>
 
-  <div class="sm:container mx-auto md:columns-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam
+  <div class="md:columns-2 mt-8 md:mt-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Ullam
     accusamus
     deleniti
     illo
