--- a/dev/index.html
+++ b/dev/index.html
@@ -12,15 +12,16 @@
 <body class="mx-auto lg:container p-32 accent-black">
   <h1>Heading 1</h1>
 
-  <div class="md:columns-2 mt-8 md:mt-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Ullam
-    accusamus
-    deleniti
-    illo
-    eveniet,
-    aspernatur quasi
-    id quidem? Harum, quis earum? Non delectus voluptas debitis beatae atque dolor enim esse nostrum!
-    Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet cupiditate cumque dolore voluptatem
+  <div class="mt-32 flex gap-12">
+    <div class="px-20 py-12 bg-blue hover:bg-blue-4 text-white rounded">A</div>
+    <div class="px-20 py-12 bg-red hover:bg-red-4 text-white rounded">B</div>
+    <div class="px-20 py-12 bg-green hover:bg-green-4 text-white rounded">C</div>
+  </div>
+
+  <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Ullam accusamus deleniti illo eveniet, aspernatur quasi id quidem? Harum, quis earum? Non delectus voluptas debitis
+    beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet
+    cupiditate cumque dolore voluptatem
     adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
     expedita, quos consequatur! Cumque.
     Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae officia
@@ -74,53 +75,6 @@
   &lt;/p&gt;
   &lt;!-- ... --&gt;
 &lt;/article&gt;</code></pre>
-
-  <!-- <div class="wrapper loaders">
-      <span class="loader-1"></span>
-      <span class="loader-2"></span>
-      <span class="loader-3"></span>
-      <span class="loader-4"></span>
-      <span class="loader-5"></span>
-      <span class="loader-6"></span>
-      <span class="loader-7"></span>
-      <span class="loader-8"></span>
-      <span class="loader-9"></span>
-    </div> -->
-
-  <!-- <div class="md:centered">Hello</div> -->
-
-  <!-- <div class="the-stack wrapper stack-x md:stack-x-reverse">
-      <div class="box box--a centered rise">Box A</div>
-      <div class="box box--b centered">Box B</div>
-      <div class="box box--c centered">Box C</div>
-    </div> -->
-
-  <!-- <div class="the-stack wrapper stack-y md:stack-y-reverse">
-      <div class="box box--d centered">Box D</div>
-      <div class="box box--e centered">Box E</div>
-      <div class="box box--f centered">Box F</div>
-    </div> -->
-
-  <!-- <div class="is-box">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque cum cumque hic nesciunt. Laborum nemo doloremque
-      illo, consequuntur dolore nostrum tenetur libero nihil molestiae iure amet quasi architecto obcaecati mollitia.
-
-      <p>
-        Loremipsumdolorsitametconsecteturadipisicingelit. Laboriosam itaque quos, cumque voluptatibus recusandae
-        namtemporibusnesciuntmodiquisquamaspernatur laudantium! Quo eos, exercitationem-dolores-eius-abenim explicabo
-        odit?
-      </p>
-    </div> -->
-
-  <!-- <div class="stack-y">
-      <input type="text" />
-      <input type="checkbox" name="checkbox1" id="checkbox1" />
-      <select name="countries" id="countries">
-        <option value="pt">Portugal</option>
-        <option value="uk">United Kingdom</option>
-        <option value="es">Spain</option>
-      </select>
-    </div> -->
 </body>
 
 </html>
