--- a/dev/index.html
+++ b/dev/index.html
@@ -13,7 +13,7 @@
   <h1>Heading 1</h1>
 
   <!-- <div class="stacker"> -->
-  <div class="flex flex-row space-x-md">
+  <div class="mt-16 flex flex-row space-x-md">
     <div
       class="flex-1 px-32 py-24 bg-green-3 hover:bg-green-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-green-8 border-dotted hover:border-solid text-center">
       A
@@ -28,7 +28,8 @@
     </div>
   </div>
 
-  <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+  <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">Lorem ipsum dolor sit amet, consectetur
+    adipisicing elit.
     Ullam accusamus deleniti illo eveniet, aspernatur quasi id quidem? Harum, quis earum? Non delectus voluptas debitis
     beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet
     cupiditate cumque dolore voluptatem
