--- a/dev/index.html
+++ b/dev/index.html
@@ -9,48 +9,52 @@
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body class="mx-auto xl:container p-32 accent-black">
-  <h1>Heading 1</h1>
+<body class="accent-black">
+  <div class="mx-auto xl:container p-32">
+    <header class="navbar">Menu</header>
 
-  <!-- <div class="stacker"> -->
-  <div class="mt-16 flex flex-row space-x-md">
-    <div
-      class="flex-1 px-32 py-24 bg-green-3 hover:bg-green-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-green-8 border-dotted hover:border-solid text-center">
-      A
+    <h1>Heading 1</h1>
+
+    <!-- <div class="stacker"> -->
+    <div class="mt-16 flex flex-row space-x-md">
+      <div
+        class="flex-1 px-32 py-24 bg-green-3 hover:bg-green-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-green-8 border-dotted hover:border-solid text-center">
+        A
+      </div>
+      <div
+        class="flex-1 px-32 py-24 bg-yellow-3 hover:bg-yellow-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-yellow-8 border-dotted hover:border-solid text-center">
+        B
+      </div>
+      <div
+        class="flex-1 px-32 py-24 bg-red-3 hover:bg-red-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-red-8 border-dotted hover:border-solid text-center">
+        C
+      </div>
     </div>
-    <div
-      class="flex-1 px-32 py-24 bg-yellow-3 hover:bg-yellow-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-yellow-8 border-dotted hover:border-solid text-center">
-      B
-    </div>
-    <div
-      class="flex-1 px-32 py-24 bg-red-3 hover:bg-red-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-red-8 border-dotted hover:border-solid text-center">
-      C
-    </div>
-  </div>
 
-  <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">Lorem ipsum dolor sit amet, consectetur
-    adipisicing elit.
-    Ullam accusamus deleniti illo eveniet, aspernatur quasi id quidem? Harum, quis earum? Non delectus voluptas debitis
-    beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet
-    cupiditate cumque dolore voluptatem
-    adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
-    expedita, quos consequatur! Cumque.
-    Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae officia
-    velit. Aperiam, ex minima? Magnam, aspernatur. Velit iste asperiores minima, magnam voluptatum in.
-    Ab qui officiis aperiam voluptatem, nostrum est magni voluptatum similique aliquid. Eius nam omnis officia beatae
-    earum consequuntur unde id, quia, ratione blanditiis quo molestias autem, deleniti deserunt neque voluptate.
-    Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae consequuntur
-    praesentium optio veritatis unde, tempore molestias non iusto tempora ab quod, labore asperiores consectetur?
-    Obcaecati!</div>
+    <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit.
+      Ullam accusamus deleniti illo eveniet, aspernatur quasi id quidem? Harum, quis earum? Non delectus voluptas
+      debitis
+      beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet
+      cupiditate cumque dolore voluptatem
+      adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
+      expedita, quos consequatur! Cumque.
+      Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae officia
+      velit. Aperiam, ex minima? Magnam, aspernatur. Velit iste asperiores minima, magnam voluptatum in.
+      Ab qui officiis aperiam voluptatem, nostrum est magni voluptatum similique aliquid. Eius nam omnis officia beatae
+      earum consequuntur unde id, quia, ratione blanditiis quo molestias autem, deleniti deserunt neque voluptate.
+      Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae consequuntur
+      praesentium optio veritatis unde, tempore molestias non iusto tempora ab quod, labore asperiores consectetur?
+      Obcaecati!</div>
 
-  <div class="wrapper">
-    <p class="text">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto commodi id dolorem deleniti eum quis ea.
-      Quaerat, possimus doloribus? Laborum iste quam <a href="#">exercitationem aperiam</a> eum expedita nisi illo
-      commodi itaque.
-    </p>
+    <div class="wrapper">
+      <p class="text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto commodi id dolorem deleniti eum quis ea.
+        Quaerat, possimus doloribus? Laborum iste quam <a href="#">exercitationem aperiam</a> eum expedita nisi illo
+        commodi itaque.
+      </p>
 
-    <!-- <div class="lists centered">
+      <!-- <div class="lists centered">
         <ul role="list">
           <li>Item 1</li>
           <li>Item 2</li>
@@ -59,33 +63,23 @@
         </ul>
       </div> -->
 
-    <!-- <button class="btn">Click me</button> -->
+      <!-- <button class="btn">Click me</button> -->
+    </div>
+
+    <div class="wrapper hidden md:block">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
+      blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod
+      <a href="#">consequntur</a> molestiae atque reprehenderit.
+    </div>
+
+    <blockquote>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione animi,
+        accusantium nulla reiciendis, hic officia doloribus eos delectus beatae error quaerat sapiente fuga tempore!</p>
+    </blockquote>
+
+    <pre><code>console.log('hello 🚀');</code></pre>
+    <pre class="mt-16"><code data-lang="JavaScript">console.log('hello 👋');</code></pre>
   </div>
-
-  <div class="wrapper hidden md:block">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
-    blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod
-    <a href="#">consequntur</a> molestiae atque reprehenderit.
-  </div>
-
-  <blockquote>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione animi,
-      accusantium nulla reiciendis, hic officia doloribus eos delectus beatae error quaerat sapiente fuga tempore!</p>
-  </blockquote>
-
-  <pre><code class="language-html">&lt;article class="prose"&gt;
-  &lt;h1&gt;Garlic bread with cheese: What the science tells us&lt;/h1&gt;
-  &lt;p&gt;
-    For years parents have espoused the health benefits of eating garlic bread with cheese to their
-    children, with the food earning such an iconic status in our culture that kids will often dress
-    up as warm, cheesy loaf for Halloween.
-  &lt;/p&gt;
-  &lt;p&gt;
-    But a recent study shows that the celebrated appetizer may be linked to a series of rabies cases
-    springing up around the country.
-  &lt;/p&gt;
-  &lt;!-- ... --&gt;
-&lt;/article&gt;</code></pre>
 </body>
 
 </html>
