--- a/dev/index.html
+++ b/dev/index.html
@@ -20,6 +20,9 @@
 
     <h1>Heading 1</h1>
 
+    <button class="btn my-32">Click</button>
+    <a href="#" class="btn my-32">Click</a>
+
     <!-- <div class="stacker"> -->
     <div class="mt-16 flex flex-row space-x-md">
       <div
