--- a/dev/index.html
+++ b/dev/index.html
@@ -13,30 +13,40 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 </head>
 
-<body class="accent-black">
+<body class="accent-primary">
   <div class="mx-auto xl:container p-32">
     <header class="navbar">Menu</header>
 
     <h1>Heading 1</h1>
 
+    <div class="mt-16 flex flex-row space-x-md">
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black bg-red-0">0</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black bg-red-1">1</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black bg-red-2">2</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black bg-red-3">3</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black bg-red-4">4</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white bg-red-5">5</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white bg-red-6">6</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white bg-red-7">7</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white bg-red-8">8</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white bg-red-9">9</div>
+    </div>
+
+    <div class="mt-16 flex flex-row space-x-md">
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black box-0">0</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black box-1">1</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black box-2">2</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black box-3">3</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-black box-4">4</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white box-5">5</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white box-6">6</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white box-7">7</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white box-8">8</div>
+      <div class="w-48 h-48 rounded-sm centered font-bold text-white box-9">9</div>
+    </div>
+
     <button class="btn my-32">Click</button>
     <a href="#" class="btn my-32">Click</a>
-
-    <!-- <div class="stacker"> -->
-    <div class="mt-16 flex flex-row space-x-md">
-      <div
-        class="flex-1 px-32 py-24 bg-green-3 hover:bg-green-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-green-8 border-dotted hover:border-solid text-center">
-        A
-      </div>
-      <div
-        class="flex-1 px-32 py-24 bg-yellow-3 hover:bg-yellow-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-yellow-8 border-dotted hover:border-solid text-center">
-        B
-      </div>
-      <div
-        class="flex-1 px-32 py-24 bg-red-3 hover:bg-red-4 text-inherit rounded-2xl hover:shadow-xl border-current border-2 hover:border-red-8 border-dotted hover:border-solid text-center">
-        C
-      </div>
-    </div>
 
     <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">Lorem ipsum dolor sit amet, consectetur
       adipisicing elit.
