--- a/dev/index.html
+++ b/dev/index.html
@@ -19,8 +19,12 @@
 
     <h1>Heading 1</h1>
 
-    <button class="btn my-32">Click</button>
-    <a href="#" class="btn my-32">Click</a>
+    <div class="my-32 flex flex-wrap gap-4">
+      <button>Button</button>
+      <button disabled>Button</button>
+      <button class="btn btn--dark">Button</button>
+      <button class="btn btn--primary">Button</button>
+    </div>
 
     <div class="mt-16 flex flex-row space-x-md">
       <div class="w-48 h-48 rounded-sm centered font-bold text-black bg-red-0">0</div>
