--- a/dev/index.html
+++ b/dev/index.html
@@ -24,6 +24,10 @@
       <button disabled>Button</button>
       <button class="btn btn--dark">Button</button>
       <button class="btn btn--primary">Button</button>
+      <button class="btn btn--info">Button</button>
+      <button class="btn btn--success">Button</button>
+      <button class="btn btn--warning">Button</button>
+      <button class="btn btn--danger">Button</button>
     </div>
 
     <div class="mt-16 flex flex-row space-x-md">
