--- a/dev/index.html
+++ b/dev/index.html
@@ -28,6 +28,8 @@
       <button class="btn btn--success">Button</button>
       <button class="btn btn--warning">Button</button>
       <button class="btn btn--danger">Button</button>
+      <button class="btn btn--outline btn--dark">Button</button>
+      <button class="btn btn--outline btn--info">Button</button>
     </div>
 
     <div class="mt-16 flex flex-row space-x-md">
