--- a/dev/index.html
+++ b/dev/index.html
@@ -18,6 +18,11 @@
     <header class="navbar">Menu</header>
 
     <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
 
     <div class="my-32 flex flex-wrap gap-4">
       <button>Button</button>
